# ValidFi

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  validfi.db
backend/: .env.testnet  Cargo.toml
backend/src/: db.rs  main.rs
backend/src/routes/: ai.rs  credentials.rs  mod.rs  proofs.rs
backend/src/services/: ai_agent.rs  groq_client.rs  nargo_runner.rs  soroban.rs  zk.rs
circuits/: Nargo.toml  Prover.toml
circuits/src/: main.nr
contracts/credential-registry/: Cargo.toml
contracts/credential-registry/src/: lib.rs
contracts/health-passport-nft/: Cargo.toml
contracts/health-passport-nft/src/: lib.rs
contracts/issuer-registry/: Cargo.toml
contracts/issuer-registry/src/: lib.rs
contracts/revocation-registry/: Cargo.toml
contracts/revocation-registry/src/: lib.rs
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/app/: page.tsx
frontend/src/components/: HeroSphere.tsx
frontend/src/components/ui/: sonner.tsx
frontend/src/lib/: api.ts  soroban.ts
