[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
aes-gcm = { version = "0.10.3", features = ["std"] }
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json"] }
k256 = { version = "0.13.3", features = ["ecdsa", "sha256"] }
sha2 = "0.10.8"
blake2 = "0.10.6"
hex = "0.4.3"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenvy = "0.15"
